--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "teo-nextjs-portfolio",
+  "name": "abhi-nextjs-portfolio",
   "private": true,
   "scripts": {
     "dev": "next dev",
